<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="Global_Variables_EtherCAT" Id="{d76f2eaf-f0c3-42c2-8317-22c7ba689cf7}">
    <Declaration><![CDATA[{attribute 'analysis' := '-33'}
VAR_GLOBAL CONSTANT
    cnSlaveAddrArrSize	: UINT := 256;
    cnEscMaxPorts : UINT := 3; // Maximum number of ports (4) on ESC
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>